<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_popUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:elevation="6dp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_pop_camera"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/_22sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/color_accent"
                    android:padding="@dimen/_14sdp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_photo_camera_24" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_pop_file"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:clickable="true"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/teal_200"
                    android:padding="@dimen/_14sdp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_insert_drive_file_24"
                    android:focusable="true" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_pop_gallery"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_22sdp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/purple_500"
                    android:padding="@dimen/_14sdp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_photo_size_select_actual_24" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/_29sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:text="@string/camera"
                    android:textColor="@color/slate_grey"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginRight="@dimen/_34sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:text="@string/gallery"
                    android:textColor="@color/slate_grey"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:text="@string/file"
                    android:textColor="@color/slate_grey"
                    android:textSize="@dimen/_12ssp" />

            </RelativeLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
